OK, it compiles and doesn't crash...